# ayrshare-mcp

./: .env.example  .gitignore  DEPLOYMENT_STATUS.md  FASTMCP_CLOUD_DEPLOY.md  README.md  __init__.py  ayrshare_client.py  fastmcp.json  health_check.py  production_config.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  server.py  validate_deployment.sh
docs/: MCP_SETUP.md  QUICKSTART.md
docs/deployment/: DEPLOY.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_SUMMARY.md  FASTMCP_CLOUD_DEPLOYMENT.md  PRODUCTION_CONFIG.md  README_DEPLOYMENT_SECTION.md
tests/: test_client.py  test_integration.py  test_live_api.py  test_prompts.py  test_resources.py  test_tools.py
